[gd_scene load_steps=15 format=3 uid="uid://db73d2wj77ldt"]

[ext_resource type="Script" path="res://Interactables/Dungeon/Scripts/locked_door.gd" id="1_dnw5d"]
[ext_resource type="Texture2D" uid="uid://c0em5tfsjemb4" path="res://Interactables/Dungeon/dungeon_props.png" id="2_0lkre"]
[ext_resource type="Resource" uid="uid://b8v8ui8xkhped" path="res://Items/key_dungeon.tres" id="2_dtyx5"]
[ext_resource type="PackedScene" uid="uid://dfcusshnoq3n1" path="res://Components/PersistantDataHandler/persistant_data_handler.tscn" id="3_mma5d"]
[ext_resource type="AudioStream" uid="uid://by50jqynyo5bs" path="res://Interactables/Dungeon/Audio/locked_door.wav" id="3_oj54o"]
[ext_resource type="AudioStream" uid="uid://cbtkybycxouv8" path="res://Interactables/Dungeon/Audio/unlock_door.wav" id="4_nu238"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8gge0"]
size = Vector2(64, 70)

[sub_resource type="Animation" id="Animation_86oml"]
resource_name = "closed"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("StaticBody2D/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_m2a1y"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("StaticBody2D/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_nqocu"]
resource_name = "opened"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("StaticBody2D/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.0333333),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_6jmpl"]
resource_name = "close_door"
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("StaticBody2D/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="Animation" id="Animation_cpti7"]
resource_name = "open_door"
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("StaticBody2D/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_bp0ih"]
_data = {
"RESET": SubResource("Animation_m2a1y"),
"close_door": SubResource("Animation_6jmpl"),
"closed": SubResource("Animation_86oml"),
"open_door": SubResource("Animation_cpti7"),
"opened": SubResource("Animation_nqocu")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_yyitg"]
size = Vector2(37.5, 20)

[node name="LockedDoor" type="Node2D"]
script = ExtResource("1_dnw5d")
key_item = ExtResource("2_dtyx5")
locked_audio = ExtResource("3_oj54o")
open_audio = ExtResource("4_nu238")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(32, -38)
texture = ExtResource("2_0lkre")
hframes = 7

[node name="StaticBody2D" type="StaticBody2D" parent="."]
collision_layer = 16
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(32, -31)
shape = SubResource("RectangleShape2D_8gge0")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
process_mode = 3
libraries = {
"": SubResource("AnimationLibrary_bp0ih")
}

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]

[node name="PersistantDataHandler" parent="." instance=ExtResource("3_mma5d")]

[node name="InteractArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="InteractArea"]
position = Vector2(32, -5)
shape = SubResource("RectangleShape2D_yyitg")
debug_color = Color(0.591616, 0.545539, 0.110969, 0.42)

[connection signal="area_entered" from="InteractArea" to="." method="_on_interact_area_area_entered"]
[connection signal="area_exited" from="InteractArea" to="." method="_on_interact_area_area_exited"]
